--- a/techism/templates/500.html
+++ b/techism/templates/500.html
@@ -1,10 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<section id="content">
-    <article class="vevent">
-        <section>
-            <p>Oops, something went wrong!</p>
-        </section>
-    </article>
-</section>
+<div id="content" class="content">
+    <p>Oops, something went wrong!</p>
+</div>
 {% endblock %}
