--- a/techism/templates/about.html
+++ b/techism/templates/about.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section id="content">
-    <section class="content">
+<div id="content" class="content">
         <h2>Über uns</h2>
 
         <h3>Warum</h3>
@@ -33,6 +32,5 @@
             am besten via <a href="http://twitter.com/#!/techism">Twitter</a>
             oder <a href="mailto:team@techism.de">Mail</a>.
         </p>
-    </section>
-</section>
+</div>
 {% endblock %}
