--- a/techism/templates/impressum.html
+++ b/techism/templates/impressum.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section id="content">
-    <section class="content">
+<div id="content" class="content">
         <h2>Impressum</h2>
         <p>
             Techism<br>
@@ -17,6 +16,5 @@
             keine Haftung für die Inhalte externer Links. Für den Inhalt
             der verlinkten Seiten sind ausschließlich deren Betreiber
             verantwortlich.</p>
-    </section>
-</section>
+</div>
 {% endblock %}
