--- a/techism/templates/organizations/index.html
+++ b/techism/templates/organizations/index.html
@@ -37,10 +37,8 @@
         {% endif %}
     </div>
 {% else %}
-    <div id="content">
-        <div class="content">
-            <p>Zur Zeit sind keine Gruppen vorhanden.</p>
-        </div>
+    <div id="content" class="content">
+        <p>Zur Zeit sind keine Gruppen vorhanden.</p>
     </div>
 {% endif %} 
     
