--- a/techism/templates/events/index.html
+++ b/techism/templates/events/index.html
@@ -27,7 +27,7 @@
         {% endif %}
     {% else %}
         <div class="content">
-            <p>Zur Zeit sind keine Events vorhanden.</p>
+            <p>Keine Events vorhanden.</p>
         </div>
     {% endif %}  
 </div>
