extend About page

--- a/techism/templates/about.html
+++ b/techism/templates/about.html
@@ -2,6 +2,55 @@
 
 {% block content %}
 <div id="content" class="content">
+        <h2>URL Patterns</h2>
+
+        <h3>Tags</h3>
+        <p>Das Filtern von Events nach einem einzelnen Tag ist für die Webseite, sowie den iCal- und 
+        RSS-Feed möglich:
+            <ul>
+                <li>Alle zukünftigen Events:
+                    <ul>
+                        <li>Webseite:
+                            <a href="http://www.techism.de/events/">http://www.techism.de/events/</a>
+                        </li>
+                        <li>iCal:
+                            <a href="http://www.techism.de/feed.ics">http://www.techism.de/feed.ics</a>
+                        </li>
+                        <li>RSS: 
+                            <a href="http://www.techism.de/feeds/atom/upcomming_events">http://www.techism.de/feeds/atom/upcomming_events</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>Zukünftige Events gefilter nach Tag:
+                    <ul>
+                        <li>Webseite:
+                            <a href="http://www.techism.de/events/tags/javascript/">http://www.techism.de/events/tags/javascript/</a>
+                        </li>
+                        <li>iCal:
+                            <a href="http://www.techism.de/ical/tags/javascript/feed.ics">http://www.techism.de/feed.ics</a>
+                        </li>
+                        <li>RSS:
+                            <a href="http://www.techism.de/feeds/atom/tags/javascript/upcomming_events">http://www.techism.de/feeds/atom/tags/javascript/upcomming_events</a>
+                        </li>
+                    </ul>
+                </li>
+                
+                
+            </ul>
+        </p>
+
+        <h3>Datum</h3>
+        <p>Auf der Webseite lassen sich die Events darüber hinaus nach Datum filtern, z.B.:
+            <ul>
+                <li><a href="http://www.techism.de/events/2013/">http://www.techism.de/events/2013/</a></li>
+                <li><a href="http://www.techism.de/events/2013/tags/javascript/">http://www.techism.de/events/2013/tags/javascript/</a></li>
+                <li><a href="http://www.techism.de/events/2013/04/">http://www.techism.de/events/2013/04/</a></li>
+                <li><a href="http://www.techism.de/events/2013/04/11/">http://www.techism.de/events/2013/04/11/</a></li>
+            </ul>
+        </p>
+
+        <hr>
+
         <h2>Über uns</h2>
 
         <h3>Warum</h3>
@@ -11,12 +60,15 @@
             Eventkalender mit DIY und Community Events in unserer Nähe
             hätten und eine Übersicht an Gruppen und Usergroups, die
             sich freuen wenn man mal vorbeischaut. Wir interessieren uns
-            v.a. für IT Innovation, Digitale Kultur und alle möglichen
+            v.a. für Softwareentwicklung, IT Innovationen und alle möglichen
             Nerdthemen.</p>
 
         <h3>Wer</h3>
         <p>Christine Koppelt, Stefan Seelmann, Bernd Plontsch, Nils
-            Hitze, Andreas Hubel, Gordon Franke</p>
+            Hitze, Andreas Hubel</p>
+
+        <h3>Ehemalige</h3>
+        <p>Gordon Franke</p>
 
         <h3>Technische Umsetzung</h3>
         <p>
