--- a/techism/templates/about.html
+++ b/techism/templates/about.html
@@ -21,7 +21,7 @@
                         </li>
                     </ul>
                 </li>
-                <li>Zukünftige Events gefilter nach Tag:
+                <li>Zukünftige Events gefiltert nach Tag:
                     <ul>
                         <li>Webseite:
                             <a href="http://www.techism.de/events/tags/javascript/">http://www.techism.de/events/tags/javascript/</a>
