--- a/techism/templates/base.html
+++ b/techism/templates/base.html
@@ -24,32 +24,34 @@
         </ul>
     </nav>
 
-    {% block content %}{% endblock %}
-    <footer>
-        <div id="twocol">
-            <div id="left">
-                <ul>
-                    <li><a href="/impressum/">impressum</a></li>
-                    <li><a href="/about/">über</a></li>
-                    {% if user.is_authenticated %}
-                        {% if user.is_superuser %}
-                            <li><a href="/admin/">admin</a></li> 
+    <div id="main">
+        {% block content %}{% endblock %}
+        <footer>
+            <div id="twocol">
+                <div id="left">
+                    <ul>
+                        <li><a href="/impressum/">impressum</a></li>
+                        <li><a href="/about/">über</a></li>
+                        {% if user.is_authenticated %}
+                            {% if user.is_superuser %}
+                                <li><a href="/admin/">admin</a></li> 
+                            {% endif %}
+                            <li><a href="/accounts/logout/">logout</a></li> 
+                        {% else %}
+                            <li><a href="/accounts/login/">login</a></li>
                         {% endif %}
-                        <li><a href="/accounts/logout/">logout</a></li> 
-                    {% else %}
-                        <li><a href="/accounts/login/">login</a></li>
-                    {% endif %}
-                </ul>
+                    </ul>
+                </div>
+                <div id="right">
+                    <ul>
+                        <li><a href="/feed.ics">ical</a></li>
+                        <li><a href="/feeds/atom/upcomming_events">rss</a></li>
+                        <li><a href="http://twitter.com/techism">twitter</a></li>
+                    </ul>
+                </div>
             </div>
-            <div id="right">
-                <ul>
-                    <li><a href="/feed.ics">ical</a></li>
-                    <li><a href="/feeds/atom/upcomming_events">rss</a></li>
-                    <li><a href="http://twitter.com/techism">twitter</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
     <script src="{% static 'js/techism.js' %}"></script>
     <script src="{% static 'jquery-1.8.2/jquery-1.8.2.min.js' %}"></script>
     {% block scripts %} 
