add BrowserId/Mozilla Persona authentication

--- a/static/zocial-20121201/zocial.css
+++ b/static/zocial-20121201/zocial.css
@@ -335,6 +335,7 @@ a.zocial {
 .zocial.bitbucket {background-color: #205081;}
 .zocial.bitcoin {background-color: #efefef; color: #4d4d4d;}
 .zocial.blogger {background-color: #ee5a22;}
+.zocial.browserid {background-color: #ef882a;}
 .zocial.buffer {background-color: #232323;}
 .zocial.call {background-color: #008000;}
 .zocial.cal {background-color: #d63538;}
