use local version of include.js for better performance

--- a/techism/templates/accounts/login.html
+++ b/techism/templates/accounts/login.html
@@ -41,5 +41,5 @@
 </div>
 {% endblock %} {% block scripts %}
 <script src="{% static 'js/accounts/login.js' %}"></script>
-<script src="https://browserid.org/include.js" type="text/javascript"></script>
+<script src="{% static 'js/accounts/include.js' %}"></script>
 {% endblock %}
