small correction of documentation

--- a/techism/templates/about.html
+++ b/techism/templates/about.html
@@ -27,7 +27,7 @@
                             <a href="http://www.techism.de/events/tags/javascript/">http://www.techism.de/events/tags/javascript/</a>
                         </li>
                         <li>iCal:
-                            <a href="http://www.techism.de/ical/tags/javascript/feed.ics">http://www.techism.de/feed.ics</a>
+                            <a href="http://www.techism.de/ical/tags/javascript/feed.ics">http://www.techism.de/ical/tags/javascript/feed.ics</a>
                         </li>
                         <li>RSS:
                             <a href="http://www.techism.de/feeds/atom/tags/javascript/upcomming_events">http://www.techism.de/feeds/atom/tags/javascript/upcomming_events</a>
